# Prism-ClaudeCode

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-space.yml
analysis/: build_tables.py  echarts_report.py  metrics.py  pricing.py  report.py  report_variants.py  research_rubric.py
analysis/parse/: parse_meta.py  parse_tap.py  (+3 more)
config/: experiment.yaml  experiment_longhorizon.yaml
docs/: running-the-experiment.md
harness/: config.py  run_meta.py  runner.py  services.py  workspace.py
reports/: report.md
scripts/: deploy_space.sh  extract_problem.py  push_data.py  stage_space.sh
serve/: Dockerfile  README.md  app.py  auth.py  config.py  queries.py  requirements.txt
tests/: test_build_tables.py  test_coding_task_lightweight.py  test_collect_tap.py  test_collect_transcripts.py  test_collect_ttft.py  test_condition_launchers.py  test_config.py  test_data_source.py  test_export.py  test_extract.py  test_metrics.py  test_parse_meta.py  test_parse_tap.py  test_parse_ttft.py  test_plot_cache.py  test_plots_rest.py  test_pricing.py  test_push_data.py  test_report.py  test_research_rubric.py  test_run_meta.py  test_runner_execute.py  test_runner_plan.py  test_runner_score_wiring.py  test_runner_sweep.py  test_score_coding.py  test_score_longhorizon.py  test_score_research.py  test_serve_api.py  test_services.py  test_smoke.py  test_stage_space.py  test_token_counts.py  test_tokenizer.py  test_ttft_parse.py  test_ttft_proxy.py  test_workspace.py
web/: README.md  index.html  package-lock.json  tsconfig.json  vite.config.ts
(+250 files in other folders)
