[project]
name = "cc-experiment"
version = "0.1.0"
description = "Context-window & prefix-cache experiments on Claude Code"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.0",
    "pyarrow>=15",
    "matplotlib>=3.8",
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "tabulate>=0.9",
    "fastapi>=0.110",
    "duckdb>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
